coder-infra/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: coder
  namespace: coder
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`coder.nolimitz.io`) || HostRegexp(`^.+\.coder\.nolimitz\.io$`)
      services:
        - name: coder
          port: 80
  tls:
    secretName: coder-tls
    domains:
      - main: coder.nolimitz.io
        sans:
          - "*.coder.nolimitz.io"
